# PyMADER

./: LICENSE  README.md  pyproject.toml
pymader/: mader_optimisation.py  matrices.py  octopus.py  octopus_utils.py  separate.py
