[tool.poetry]
name = "pymader"
version = "0.1.0"
description = "A python implementation of MADER, a multi agent drone deconfliction algorithm from MIT."
authors = ["Adrian del Ser <adrian.delser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
numba = "^0.60.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
